# clog

./: .clang-format  .gitignore  LICENCE  README.md  README_CN.md  clog.hpp
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  custome_clog_define.yml
example/custom_log_level_print/: main.cpp
example/custom_prefix_print/: CMakeLists.txt
example/print/: main.cpp
examples/log_level/: CMakeLists.txt  main.cpp
examples/prefix/: CMakeLists.txt  main.cpp
examples/simple/: CMakeLists.txt
